Fix login, signup

--- a/app/src/main/res/layout/guide_main_profile.xml
+++ b/app/src/main/res/layout/guide_main_profile.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageBack"
         android:layout_width="35dp"
         android:layout_height="35dp"
+        android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.026"
