--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -72,7 +72,7 @@
         android:background="@drawable/button"
         android:ems="10"
         android:hint="                     Password"
-        android:inputType="textPersonName"
+        android:inputType="textPersonName|textPassword"
         android:text=""
         android:textColor="@color/gray"
         app:layout_constraintBottom_toTopOf="@+id/Phone_Number"
@@ -87,7 +87,7 @@
         android:background="@drawable/button"
         android:ems="10"
         android:hint="                         Email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:text=""
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="parent"
