--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,105 +4,183 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgroundsignup"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".SignUp">
+
+    <View
+        android:id="@+id/bg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/Sign_Up"
         android:layout_width="136dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="156dp"
+        android:layout_marginTop="65dp"
         android:background="@drawable/button"
         android:text="Sign Up"
-        android:textColor="@color/blue"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Phone_Number" />
 
     <EditText
         android:id="@+id/First_Name"
         android:layout_width="271dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/button"
+        android:layout_marginTop="32dp"
+        android:background="#FFFFFF"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="First Name"
         android:inputType="textPersonName"
+        android:paddingTop="8dp"
         android:singleLine="false"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/Last_Name"
+        android:textColorHighlight="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <EditText
         android:id="@+id/Last_Name"
         android:layout_width="271dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button"
+        android:layout_marginTop="8dp"
+        android:background="#FFFDFD"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="Last Name"
         android:inputType="textPersonName"
+        android:paddingTop="8dp"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/email"
+        android:textColorHighlight="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/First_Name" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="271dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button"
+        android:layout_marginTop="8dp"
+        android:background="#FFFFFF"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="Password"
         android:inputType="textPersonName|textPassword"
+        android:paddingTop="8dp"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/Phone_Number"
+        android:textColorHighlight="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="271dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button"
+        android:layout_marginTop="8dp"
+        android:background="#FFFFFF"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:paddingTop="8dp"
         android:text=""
-        app:layout_constraintBottom_toTopOf="@+id/password"
+        android:textAlignment="center"
+        android:textColorLink="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/Last_Name" />
 
     <EditText
         android:id="@+id/Phone_Number"
         android:layout_width="271dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
-        android:background="@drawable/button"
+        android:layout_marginTop="8dp"
+        android:background="#FFFFFF"
         android:ems="10"
+        android:gravity="center_horizontal"
         android:hint="Phone Number"
         android:inputType="number"
+        android:paddingTop="8dp"
+        android:textAlignment="center"
         android:textColor="@color/gray"
-        app:layout_constraintBottom_toTopOf="@+id/Sign_Up"
+        android:textColorLink="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/password" />
+
+    <View
+        android:id="@+id/accesories1"
+        android:layout_width="244dp"
+        android:layout_height="224dp"
+        android:layout_marginEnd="288dp"
+        android:layout_marginRight="288dp"
+        android:background="@drawable/bg_accesories"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/accesories"
+        android:layout_width="244dp"
+        android:layout_height="224dp"
+        android:layout_marginStart="288dp"
+        android:layout_marginLeft="288dp"
+        android:background="@drawable/bg_accesories"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:clickable="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_arrow" />
+
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:text="Welcome!"
+        android:textSize="42sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.309"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Come aboard Adventurer!"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.334"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
