--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -4,38 +4,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background2"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".VerifyNumber">
 
+    <View
+        android:id="@+id/bg"
+        android:layout_width="413dp"
+        android:layout_height="736dp"
+        android:background="@drawable/bg1"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="286dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="280dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="16dp"
         android:text="Enter the six digit code we sent you "
-        android:textColor="@color/gray"
+        android:textColor="#363C3E"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView13" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="3dp"
         android:text=" via phone number to continue"
-        android:textColor="@color/gray"
+        android:textColor="#363C3E"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/Input_Verification_Number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView4"
@@ -43,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
         android:text="Didn't get the code?"
-        android:textColor="@color/gray"
+        android:textColor="#363C3E"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Resend_Code"
@@ -59,7 +68,7 @@
         android:layout_marginBottom="48dp"
         android:clickable="true"
         android:text="Resend Code"
-        android:textColor="#DF4A32"
+        android:textColor="#E3D8D6"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -70,7 +79,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:ems="10"
+        android:hint="Verification Code"
         android:inputType="number"
+        android:paddingLeft="10dp"
+        android:textColorLink="#000000"
         app:layout_constraintBottom_toTopOf="@+id/Continue_Landing_Page"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -83,10 +95,31 @@
         android:background="@drawable/button"
         android:text="Continue"
         android:textAllCaps="false"
-        android:textColor="@color/blue"
+        android:textColor="#363C3E"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView13"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/lgo4" />
+
+    <ImageView
+        android:id="@+id/back_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/back_arrow" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
