tuker nama deal page jadi x page

--- a/app/src/main/res/layout/activity_deal.xml
+++ b/app/src/main/res/layout/activity_deal.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="xxxpage(as deal page)"
+        android:text="Deal Page"
         android:textColor="#000000"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
